$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.16-30 (opened September 18, 2009) 

	* FIXED BUG in cca, rda & capscale interpretation of
	formulae. This was introduced in rev 972 (Sep 1, 2009), and fixed
	in rev 1011 (Sep 18, 2009). Basically, all evaluation of 'subset'
	and 'na.action' is done after extracting the model frames with
	proven methods so that the first half of 'ordiParseFormula' is
	more similar to pre-972 versions. Function 'ordiParseFormula'
	could be re-written more elegantly, but deliberately breaking it
	twice instead of breaking it once is just too much.

	* cca/rda/capscale: cca(dune ~ poly(A1, 2), dune.env)
	failed. Internal changes in 'ordiTerminfo' which now always looks
	at the model frame returned by 'ordiParseFormula' instead of
	looking at the 'data' (and the 'data' arg is now unused in
	'ordiTerminfo'). 

	* FIXED (minor): cca(dune ~ Management, dune.env, subset =
	Management == "SF") failed in 'contrasts()' called from
	'model.matrix()' because there is only one level in Management.
	Now 'ordiParseFormula' adds a level with an unlikely name of
	.ThisVarHasOnly1Level, so that model.matrix works, but
	predict.cca(..., newdata=, type = "lc") rejects unknown factor
	levels.
	
Version 1.16-29 (closed September 18, 2009)

	* meandist: plot got an 'ylim' argument. This is practical when
	users want to display several plots side by side, and requested by
	Heli Suurkuukka.

	* WARNING OF A BUG in cca, rda & capscale: all versions have
	failed since rev 972 (Sep 1, 2009) if an argument in a model was a
	matrix. Now these things work so that tests pass, but results are
	wrong , because get_all_vars() does not get names right for matrix
	columns in the model frame. This is manifest in the example of
	varpart() that uses matrix items (such as mite.pcnm). It can be
	also seen with this:
	p <- poly(dune.env$A1, 3)
	cca(dune ~  p + Management, dune.env)
	The following seems to work: