@@ -1,0 +1,5 @@
+`calibrate` <- 
+    function(object, ...)
+{
+    UseMethod("calibrate")
+}
